[gd_scene load_steps=3 format=2]

[ext_resource path="res://lib/smoothstep/interpolation_test/interpolation_tester.gd" type="Script" id=1]
[ext_resource path="res://lib/smoothstep/interpolation_test/interpolator.tscn" type="PackedScene" id=2]

[node name="interpolation_tester" type="Node2D"]
script = ExtResource( 1 )

[node name="interpolator" parent="." instance=ExtResource( 2 )]
position = Vector2( -274, 1 )

[node name="interpolator3" parent="." instance=ExtResource( 2 )]
position = Vector2( -28, 1 )

[node name="interpolator2" parent="." instance=ExtResource( 2 )]
position = Vector2( -151, 1 )

[node name="interpolator4" parent="." instance=ExtResource( 2 )]
position = Vector2( 95, 1 )

[node name="interpolator5" parent="." instance=ExtResource( 2 )]
position = Vector2( 218, 1 )

